--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^8.33.1",
     "sass": "^1.49.7",
     "styled-components": "^5.3.3",
     "typeface-merriweather": "0.0.72",
