--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.33.1",
     "sass": "^1.49.7",
+    "storage-cover": "^1.0.1",
     "styled-components": "^5.3.3",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75"
