--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "url": "https://github.com/HoseungJang/blog.hoseung.me/issues"
   },
   "dependencies": {
-    "dark-theme-github": "github:remorses/dark-github-theme",
     "date-fns": "^2.29.3",
     "gatsby": "^4.25.7",
     "gatsby-plugin-feed": "^4.7.0",
@@ -23,11 +22,11 @@
     "gatsby-plugin-sitemap": "^5.7.0",
     "gatsby-remark-copy-linked-files": "^5.24.0",
     "gatsby-remark-images": "^6.7.0",
-    "gatsby-remark-vscode": "^3.3.1",
+    "gatsby-remark-prismjs": "^6.25.0",
     "gatsby-source-filesystem": "^4.7.0",
     "gatsby-transformer-remark": "^5.7.0",
     "gatsby-transformer-sharp": "^4.7.0",
-    "prismjs": "^1.25.0",
+    "prismjs": "^1.29.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -36,8 +35,7 @@
     "storage-cover": "^1.0.1",
     "styled-components": "^5.3.3",
     "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
-    "vscode-theme-github-light": "github:yunlingz/vscode-theme-github-light"
+    "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.5",
