--- a/blog/package.json
+++ b/blog/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.1"
   },
   "devDependencies": {
     "@types/node": "^20",
