--- a/blog/package.json
+++ b/blog/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
+    "github-markdown-css": "^5.8.0",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-intersection-observer": "^9.13.1"
+    "react-markdown": "^9.0.1",
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
