--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-fns/tz": "^1.2.0",
     "date-fns": "^4.1.0",
     "github-markdown-css": "^5.8.0",
     "next": "15.0.3",
