--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@date-fns/tz": "^1.2.0",
     "date-fns": "^4.1.0",
     "github-markdown-css": "^5.8.0",
+    "highlight.js": "^11.11.1",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
